# irods_resource_plugin_s3

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  VERSION  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py  irods_query.hpp  irods_resource_plugin_s3.list.template
.github/workflows/: build-and-test-plugin-with-irods-packages.yml  build-and-test-plugin.yml  linter-irods-clang-format.yml  linter-irods-clang-tidy.yml
libs3/: .clang-format  CMakeLists.txt  README.md
libs3/include/libs3/: error_parser.h  libs3.h  libs3_chunked.h  request.h  request_context.h  response_headers_handler.h  simplexml.h  string_buffer.h  util.h
libs3/src/: bucket.c  bucket_metadata.c  error_parser.c  general.c  multipart.c  object.c  object_chunked.c  request.c  request_chunked.c  request_context.c  response_headers_handler.c  service.c  service_access_logging.c  simplexml.c  util.c
packaging/: build.sh  cleanup_buckets.py  irods_resource_plugin_s3.list.template  move2DA.r  postinst  resource_suite_s3_cache.py  resource_suite_s3_nocache.py  s3_prc_upload_issues_2260_2261.py  s3plugin_lib.py  test_irods_resource_plugin_s3.py  test_irods_resource_plugin_s3_ceph.py  test_irods_resource_plugin_s3_for_cloudian.py  test_irods_resource_plugin_s3_for_gcp.py  test_irods_resource_plugin_s3_fujifilm.py  test_irods_resource_plugin_s3_gcs.py  test_irods_resource_plugin_s3_minio.py
s3/: Makefile  libeirods_s3.cpp  libeirods_s3.h  libirods_s3.cpp  libirods_s3.hpp  s3_archive_operations.cpp  s3_archive_operations.hpp  s3_cacheless_operations.cpp  s3_cacheless_operations.hpp  s3_operations.cpp  s3_operations.hpp  s3_plugin_logging_category.hpp
s3/s3_transport/: read_shared_memory.cpp
s3/s3_transport/include/: circular_buffer.hpp  lock_and_wait_strategy.hpp  managed_shared_memory_object.hpp  s3_multipart_shared_data.hpp  s3_transport.hpp  s3_transport_callbacks.hpp  s3_transport_logging_category.hpp  s3_transport_types.hpp  s3_transport_util.hpp
s3/s3_transport/src/: s3_transport.cpp
s3/s3_transport/unit_tests/: CMakeLists.txt  create_unit_test_files.sh  unit_tests_list.json
s3/s3_transport/unit_tests/cmake/test_config/: irods_s3_transport.cmake
s3/s3_transport/unit_tests/src/: main.cpp  test_s3_transport.cpp
s3/s3fs/: addhead.cpp  cache.cpp  common.h  common_auth.cpp  config.h  curl.cpp  curl.h  fdcache.cpp  fdcache.h  gnutls_auth.cpp  nss_auth.cpp  openssl_auth.cpp  s3fs.cpp  s3fs.h  s3fs_util.cpp  s3fs_util.h  string_util.cpp
s3_resource/: CMakeLists.txt
s3_resource/include/irods/private/s3_resource/: multipart_shared_data.hpp  s3_operations.hpp  s3_plugin_logging_category.hpp  s3_resource.hpp
s3_resource/src/: s3_operations.cpp  s3_resource.cpp
s3_transport/: CMakeLists.txt
s3_transport/include/irods/private/s3_transport/: callbacks.hpp  circular_buffer.hpp  logging_category.hpp  managed_shared_memory_object.hpp  multipart_shared_data.hpp  s3_transport.hpp  types.hpp  util.hpp
s3_transport/src/: s3_transport.cpp
unit_tests/: CMakeLists.txt
unit_tests/cmake/test_config/: irods_s3_transport.cmake
unit_tests/src/: main.cpp  test_s3_transport.cpp
